--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -26,8 +26,8 @@ environment:
   - job_name: macOS_64
     appveyor_build_worker_image: macos-mojave
 
-  #- job_name: macOS_64_ARM
-  #  appveyor_build_worker_image: macos-bigsur
+  - job_name: macOS_64_ARM
+    appveyor_build_worker_image: macos-bigsur
 
 for:
   - matrix: 
@@ -55,7 +55,7 @@ for:
       - clang   -c -arch x86_64 -fPIC -std=c11 -xc ./WDL/zlib/*.c 
       - clang   -c -arch x86_64 -fPIC -std=c11 -xc ./kuba/*.c 
       - clang++ -c -arch x86_64 -fPIC -std=c++14 -DSWELL_PROVIDED_BY_APP "./WDL/swell/swell-modstub.mm" "./WDL/lice/lice_png.cpp" "./WDL/lice/lice_png_write.cpp" "./WDL/lice/lice_jpg.cpp" "./WDL/lice/lice_jpg_write.cpp" "./WDL/lice/lice_colorspace.cpp" "./WDL/lice/lice.cpp"
-      - clang++    -arch x86_64 -fPIC -std=c++14 -dynamiclib -DSWELL_PROVIDED_BY_APP -I"./WDL/swell/" -I"./WDL/lice" -I"./WDL/jpeglib" -I"./WDL/libpng" -I"./WDL/zlib/" -I"./kuba/" js_ReaScriptAPI.cpp js_ReaScriptAPI_ObjC.mm  *.o -framework AppKit -framework Cocoa -lc++ -stdlib=libc++ -o "reaper_js_ReaScriptAPI64.dylib"
+      - clang++    -arch x86_64 -fPIC -std=c++14 -dynamiclib -DSWELL_PROVIDED_BY_APP -I"./WDL/swell/" -I"./WDL/lice" -I"./WDL/jpeglib" -I"./WDL/libpng" -I"./WDL/zlib/" -I"./kuba/" js_ReaScriptAPI.cpp js_ReaScriptAPI_ObjC.mm *.o -framework AppKit -framework Cocoa -lc++ -stdlib=libc++ -o "reaper_js_ReaScriptAPI64.dylib"
     test_script:
       - file reaper_js_ReaScriptAPI64.dylib
       - otool -L reaper_js_ReaScriptAPI64.dylib
@@ -68,7 +68,9 @@ for:
       - clang -c -arch arm64 -fPIC -std=c17 -xc ./WDL/jpeglib/*.c 
       - clang -c -arch arm64 -fPIC -std=c17 -xc ./WDL/zlib/*.c 
       - clang -c -arch arm64 -fPIC -std=c17 -xc ./kuba/*.c 
-      - clang++  -arch arm64 -fPIC -dynamiclib -undefined dynamic_lookup -std=c++17 -DSWELL_PROVIDED_BY_APP -I"./WDL/swell/" -I"./WDL/lice" -I"./WDL/jpeglib" -I"./WDL/libpng" -I"./WDL/zlib/" -I"./kuba/" js_ReaScriptAPI.cpp js_ReaScriptAPI_ObjC.mm "./WDL/swell/swell-modstub.mm" "./WDL/lice/lice_png.cpp" "./WDL/lice/lice_png_write.cpp" "./WDL/lice/lice_jpg.cpp" "./WDL/lice/lice_jpg_write.cpp" "./WDL/lice/lice_colorspace.cpp" "./WDL/lice/lice.cpp" *.o -framework AppKit -framework Cocoa -lc++ -stdlib=libc++ -o "reaper_js_ReaScriptAPI64_ARM.dylib"
+      - clang++ -c -arch arm64 -fPIC -std=c++14 -DSWELL_PROVIDED_BY_APP "./WDL/swell/swell-modstub.mm" "./WDL/lice/lice_png.cpp" "./WDL/lice/lice_png_write.cpp" "./WDL/lice/lice_jpg.cpp" "./WDL/lice/lice_jpg_write.cpp" "./WDL/lice/lice_colorspace.cpp" "./WDL/lice/lice.cpp"
+      - clang++  -arch arm64 -fPIC -std=c++14 -dynamiclib -DSWELL_PROVIDED_BY_APP -I"./WDL/swell/" -I"./WDL/lice" -I"./WDL/jpeglib" -I"./WDL/libpng" -I"./WDL/zlib/" -I"./kuba/" js_ReaScriptAPI.cpp js_ReaScriptAPI_ObjC.mm *.o -framework AppKit -framework Cocoa -lc++ -stdlib=libc++ -o "reaper_js_ReaScriptAPI64_ARM.dylib"
+      #- clang++  -arch arm64 -fPIC -dynamiclib -undefined dynamic_lookup -std=c++17 -DSWELL_PROVIDED_BY_APP -I"./WDL/swell/" -I"./WDL/lice" -I"./WDL/jpeglib" -I"./WDL/libpng" -I"./WDL/zlib/" -I"./kuba/" js_ReaScriptAPI.cpp js_ReaScriptAPI_ObjC.mm "./WDL/swell/swell-modstub.mm" "./WDL/lice/lice_png.cpp" "./WDL/lice/lice_png_write.cpp" "./WDL/lice/lice_jpg.cpp" "./WDL/lice/lice_jpg_write.cpp" "./WDL/lice/lice_colorspace.cpp" "./WDL/lice/lice.cpp" *.o -framework AppKit -framework Cocoa -lc++ -stdlib=libc++ -o "reaper_js_ReaScriptAPI64_ARM.dylib"
     test_script:
       - file reaper_js_ReaScriptAPI64_ARM.dylib
 
